--- a/index.html
+++ b/index.html
@@ -3,53 +3,63 @@
     <link rel="icon" href="">
     <link rel="stylesheet" href="goodmanpark_style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script type="text/javascript" src="goodmanpark_home.js"></script>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">
-            <img src="SGPLogo.png" width="30" height="30" alt="">
-          </a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-    
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto">
-          <li class="nav-item active">
-            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Link</a>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              Dropdown
-            </a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="#">Action</a>
-              <a class="dropdown-item" href="#">Another action</a>
-              <div class="dropdown-divider"></div>
-              <a class="dropdown-item" href="#">Something else here</a>
-            </div>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link disabled" href="#">Disabled</a>
-          </li>
-        </ul>
-        <form class="form-inline my-2 my-lg-0">
-          <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-        </form>
+    <div class="header">
+      <div class="menu_button"><img class="menu_bars" src="menu_bars_round.svg"></div>
+    </div>
+    <div class="menu_panel">
+      <div class="menu_title">
+        Menu
       </div>
-    </nav>
-
-    <div class="container-fluid">
-      <div class="main_content">
-        <h1>GoodmanPark</h1>
+      <div class="menu_item about_gp">
+        About
+      </div>
+      <div class="menu_item pro_bono">
+        Pro Bono Work
+      </div>
+      <div class="menu_item contact">
+        Contact
+      </div>
+    </div>
+    <div class="main_content">
+      <div class="container">
+        <img class="homepage_logo" src="GoodmanParkLogo.png">
+        <div>
+          <div class="row about_line">
+            <div class="col-6">
+              <div class="about_key">Legal Analysis</div>
+              <div class="about_blurb">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis felis justo, laoreet ut ullamcorper eget, pellentesque ut nunc. Aliquam in felis tempor, molestie arcu in, semper mi. Nullam magna felis, suscipit a enim ac, egestas efficitur mauris. Interdum et malesuada fames ac ante ipsum primis in faucibus.</div>
+            </div>
+            <div class="col-6">
+              <div class="about_key">Advocacy</div>
+              <div class="about_blurb">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis felis justo, laoreet ut ullamcorper eget, pellentesque ut nunc. Aliquam in felis tempor, molestie arcu in, semper mi. Nullam magna felis, suscipit a enim ac, egestas efficitur mauris. Interdum et malesuada fames ac ante ipsum primis in faucibus.</div>
+            </div>
+          </div>
+          <div class="row about_line">
+            <div class="col-6">
+              <div class="about_key">Mediation</div>
+              <div class="about_blurb">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis felis justo, laoreet ut ullamcorper eget, pellentesque ut nunc. Aliquam in felis tempor, molestie arcu in, semper mi. Nullam magna felis, suscipit a enim ac, egestas efficitur mauris. Interdum et malesuada fames ac ante ipsum primis in faucibus.</div>
+            </div>
+            <div class="col-6">
+              <div class="about_key">Commercial Litigation</div>
+              <div class="about_blurb">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis felis justo, laoreet ut ullamcorper eget, pellentesque ut nunc. Aliquam in felis tempor, molestie arcu in, semper mi. Nullam magna felis, suscipit a enim ac, egestas efficitur mauris. Interdum et malesuada fames ac ante ipsum primis in faucibus.</div>
+            </div>
+          </div>
+          <div class="row about_line">
+            <div class="col-6">
+              <div class="about_key">In-house Counseling</div>
+              <div class="about_blurb">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis felis justo, laoreet ut ullamcorper eget, pellentesque ut nunc. Aliquam in felis tempor, molestie arcu in, semper mi. Nullam magna felis, suscipit a enim ac, egestas efficitur mauris. Interdum et malesuada fames ac ante ipsum primis in faucibus.</div>
+            </div>
+            <div class="col-6">
+              <div class="about_key">Public Interest</div>
+              <div class="about_blurb">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis felis justo, laoreet ut ullamcorper eget, pellentesque ut nunc. Aliquam in felis tempor, molestie arcu in, semper mi. Nullam magna felis, suscipit a enim ac, egestas efficitur mauris. Interdum et malesuada fames ac ante ipsum primis in faucibus.</div>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </body>
