--- a/about.html
+++ b/about.html
@@ -1,10 +1,35 @@
-<div>
-	<ul>
-		<li>Legal Analysis</li>
-		<li>Advocacy</li>
-		<li>Mediation</li>
-		<li>Commercial Litigation</li>
-		<li>In-house counseling</li>
-		<li>Public interest</li>
-	</ul>
+<div class="container">
+	<img class="homepage_logo" src="GoodmanParkLogo.png">
+	<div>
+		<div class="row about_line">
+		<div class="col-6">
+			<div class="about_key">Legal Analysis</div>
+			<div class="about_blurb">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis felis justo, laoreet ut ullamcorper eget, pellentesque ut nunc. Aliquam in felis tempor, molestie arcu in, semper mi. Nullam magna felis, suscipit a enim ac, egestas efficitur mauris. Interdum et malesuada fames ac ante ipsum primis in faucibus.</div>
+		</div>
+		<div class="col-6">
+			<div class="about_key">Advocacy</div>
+			<div class="about_blurb">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis felis justo, laoreet ut ullamcorper eget, pellentesque ut nunc. Aliquam in felis tempor, molestie arcu in, semper mi. Nullam magna felis, suscipit a enim ac, egestas efficitur mauris. Interdum et malesuada fames ac ante ipsum primis in faucibus.</div>
+		</div>
+		</div>
+		<div class="row about_line">
+		<div class="col-6">
+			<div class="about_key">Mediation</div>
+			<div class="about_blurb">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis felis justo, laoreet ut ullamcorper eget, pellentesque ut nunc. Aliquam in felis tempor, molestie arcu in, semper mi. Nullam magna felis, suscipit a enim ac, egestas efficitur mauris. Interdum et malesuada fames ac ante ipsum primis in faucibus.</div>
+		</div>
+		<div class="col-6">
+			<div class="about_key">Commercial Litigation</div>
+			<div class="about_blurb">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis felis justo, laoreet ut ullamcorper eget, pellentesque ut nunc. Aliquam in felis tempor, molestie arcu in, semper mi. Nullam magna felis, suscipit a enim ac, egestas efficitur mauris. Interdum et malesuada fames ac ante ipsum primis in faucibus.</div>
+		</div>
+		</div>
+		<div class="row about_line">
+		<div class="col-6">
+			<div class="about_key">In-house Counseling</div>
+			<div class="about_blurb">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis felis justo, laoreet ut ullamcorper eget, pellentesque ut nunc. Aliquam in felis tempor, molestie arcu in, semper mi. Nullam magna felis, suscipit a enim ac, egestas efficitur mauris. Interdum et malesuada fames ac ante ipsum primis in faucibus.</div>
+		</div>
+		<div class="col-6">
+			<div class="about_key">Public Interest</div>
+			<div class="about_blurb">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis felis justo, laoreet ut ullamcorper eget, pellentesque ut nunc. Aliquam in felis tempor, molestie arcu in, semper mi. Nullam magna felis, suscipit a enim ac, egestas efficitur mauris. Interdum et malesuada fames ac ante ipsum primis in faucibus.</div>
+		</div>
+		</div>
+	</div>
 </div>
