Pro-bono page now uses about styling

--- a/index.html
+++ b/index.html
@@ -8,9 +8,7 @@
     <script type="text/javascript" src="goodmanpark_home.js"></script>
   </head>
   <body>
-    <div class="header">
-      <div class="menu_button"><img class="menu_bars" src="menu_bars_round.svg"></div>
-    </div>
+    <div class="menu_button"><img class="menu_bars" src="menu_bars_round.svg"></div>
     <div class="menu_panel">
       <div class="menu_title">
         Menu
@@ -25,9 +23,13 @@
         Contact
       </div>
     </div>
+    <div class="container">
+      <div class="row">
+          <img class="homepage_logo" src="GoodmanParkLogo.png">
+      </div>
+    </div>
     <div class="main_content">
       <div class="container">
-        <img class="homepage_logo" src="GoodmanParkLogo.png">
         <div>
           <div class="row about_line">
             <div class="col-6">
