--- a/pro_bono.html
+++ b/pro_bono.html
@@ -1,41 +1,52 @@
-<div>
-	<div class="pro_bono_item">
-		<div class="pro_bono_company">Child Care Connection, Inc.</div>
-		<div class="pro_bono_location">Trenton, New Jersey</div>
-		<div class="pro_bono_description">
-			Vice-President/Member of the Board of Trustees for six years
-			for this child care resource and referral agency.  Served as
-			agency’s legal advisor in various matters.
+<div class="container">
+	<div class="row about_line">
+		<div class="col-12">
+			<div class="about_key">Child Care Connection, Inc.</div>
+			<div class="about_location">Trenton, New Jersey</div>
+			<div class="about_blurb">
+				Vice-President/Member of the Board of Trustees for six years
+				for this child care resource and referral agency.  Served as
+				agency’s legal advisor in various matters.
+			</div>
 		</div>
 	</div>
-	<div class="pro_bono_item">
-		<div class="pro_bono_company">Lawyers’ Committee For Human Rights (n/k/a Human Rights First), Asylum Project</div>
-		<div class="pro_bono_location">New York, New York</div>
-		<div class="pro_bono_description">
-			Refugee advocate.  Represented asylum applicants from Liberia
-			and Sierra Leone (second matter was done in conjunction with
-			the Hebrew Immigration Aid Society).  Continue to provide various
-			legal assistance to clients following successful grants of permanent residency status.
+	<div class="row about_line">
+		<div class="col-12">
+			<div class="about_key">Lawyers’ Committee For Human Rights (n/k/a Human Rights First), Asylum Project</div>
+			<div class="about_location">New York, New York</div>
+			<div class="about_blurb">
+				Refugee advocate.  Represented asylum applicants from Liberia
+				and Sierra Leone (second matter was done in conjunction with
+				the Hebrew Immigration Aid Society).  Continue to provide various
+				legal assistance to clients following successful grants of permanent residency status.
+			</div>
 		</div>
 	</div>
-	<div class="pro_bono_item">
-		<div class="pro_bono_company">New Sanctuary Coalition</div>
-		<div class="pro_bono_location">New York, New York</div>
-		<div class="pro_bono_description">
-			Volunteer consulting attorney for this immigrant rights organization’s <i>pro se</i> clinic.
+	<div class="row about_line">
+		<div class="col-12">
+			<div class="about_key">New Sanctuary Coalition</div>
+			<div class="about_location">New York, New York</div>
+			<div class="about_blurb">
+				Volunteer consulting attorney for this immigrant rights organization’s <i>pro se</i> clinic.
+			</div>
 		</div>
 	</div>
-	<div class="pro_bono_item">
-		<div class="pro_bono_company">Read Alliance</div>
-		<div class="pro_bono_location">New York, New York</div>
-		<div class="pro_bono_description">
-			Volunteer one-on-one reader for Early Literacy Program, various locations.
+	<div class="row about_line">
+		<div class="col-12">
+			<div class="about_key">Read Alliance</div>
+			<div class="about_location">New York, New York</div>
+			<div class="about_blurb">
+				Volunteer one-on-one reader for Early Literacy Program, various locations.
+			</div>
 		</div>
 	</div>
-	<div class="pro_bono_item">
-		<div class="pro_bono_company">Temple Adath Israel</div>
-		<div class="pro_bono_location">Lawrenceville, New Jersey</div>
-		<div class="pro_bono_description">
-			Past President, Trustee, member of the Temple’s Executive Committee, various financial and ritual committees.		</div>
+	<div class="row about_line">
+		<div class="col-12">
+			<div class="about_key">Temple Adath Israel</div>
+			<div class="about_location">Lawrenceville, New Jersey</div>
+			<div class="about_blurb">
+				Past President, Trustee, member of the Temple’s Executive Committee, various financial and ritual committees.
+			</div>
+		</div>
 	</div>
 </div>
