Moved Pro-bono text left

--- a/pro_bono.html
+++ b/pro_bono.html
@@ -1,8 +1,8 @@
 <div class="container">
 	<div class="row about_line">
 		<div class="col-12">
-			<div class="about_key">Child Care Connection, Inc.</div>
-			<div class="about_location">Trenton, New Jersey</div>
+			<div class="about_key text-left">Child Care Connection, Inc.</div>
+			<div class="about_location text-left">Trenton, New Jersey</div>
 			<div class="about_blurb">
 				Vice-President/Member of the Board of Trustees for six years
 				for this child care resource and referral agency.  Served as
@@ -12,8 +12,8 @@
 	</div>
 	<div class="row about_line">
 		<div class="col-12">
-			<div class="about_key">Lawyers’ Committee For Human Rights (n/k/a Human Rights First), Asylum Project</div>
-			<div class="about_location">New York, New York</div>
+			<div class="about_key text-left">Lawyers’ Committee For Human Rights (n/k/a Human Rights First), Asylum Project</div>
+			<div class="about_location text-left">New York, New York</div>
 			<div class="about_blurb">
 				Refugee advocate.  Represented asylum applicants from Liberia
 				and Sierra Leone (second matter was done in conjunction with
@@ -24,8 +24,8 @@
 	</div>
 	<div class="row about_line">
 		<div class="col-12">
-			<div class="about_key">New Sanctuary Coalition</div>
-			<div class="about_location">New York, New York</div>
+			<div class="about_key text-left">New Sanctuary Coalition</div>
+			<div class="about_location text-left">New York, New York</div>
 			<div class="about_blurb">
 				Volunteer consulting attorney for this immigrant rights organization’s <i>pro se</i> clinic.
 			</div>
@@ -33,8 +33,8 @@
 	</div>
 	<div class="row about_line">
 		<div class="col-12">
-			<div class="about_key">Read Alliance</div>
-			<div class="about_location">New York, New York</div>
+			<div class="about_key text-left">Read Alliance</div>
+			<div class="about_location text-left">New York, New York</div>
 			<div class="about_blurb">
 				Volunteer one-on-one reader for Early Literacy Program, various locations.
 			</div>
@@ -42,8 +42,8 @@
 	</div>
 	<div class="row about_line">
 		<div class="col-12">
-			<div class="about_key">Temple Adath Israel</div>
-			<div class="about_location">Lawrenceville, New Jersey</div>
+			<div class="about_key text-left">Temple Adath Israel</div>
+			<div class="about_location text-left">Lawrenceville, New Jersey</div>
 			<div class="about_blurb">
 				Past President, Trustee, member of the Temple’s Executive Committee, various financial and ritual committees.
 			</div>
