small changes, taking a break

--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
     </a>
   </h3>
   <h3>
-    <a href="https://www.linkedin.com/in/sethgpark/">
+    <a href="https://www.linkedin.com/in/sethgpark/" target="_blank">
       LinkedIn
     </a>
   </h3>
