Made content page a little prettier

--- a/contact.html
+++ b/contact.html
@@ -1,18 +1,18 @@
-<div>
+<div class="container">
   <h2>Contact Info</h2>
-  <h3>
+  <div class="contact_address">
       <div>GoodmanPark</div>
       <div>300 Riverside Drive, Suite 12H</div>
       <div>New York, NY 10025</div>
-  </h3>
-  <h3>
+  </div>
+  <div class="contact_email">
     <a href="mailto:Seth@GoodmanPark.com">
       Email
     </a>
-  </h3>
-  <h3>
+  </div>
+  <div class="contact_linkedin">
     <a href="https://www.linkedin.com/in/sethgpark/" target="_blank">
       LinkedIn
     </a>
-  </h3>
+  </div>
 </div>
