--- a/contact.html
+++ b/contact.html
@@ -1,9 +1,16 @@
 <div class="container">
   <h2>Contact Info</h2>
   <div class="contact_address">
-      <div>GoodmanPark</div>
-      <div>300 Riverside Drive, Suite 12H</div>
+      <div>Seth Goodman Park Law</div>
+      <div>2585 Broadway, Suite 209</div>
       <div>New York, NY 10025</div>
+  </div>
+  <div class="contact_phone">
+    Office<br/>
+    646.493.4490<br/>
+    <br/>
+    Cell<br/>
+    267.205.3753
   </div>
   <div class="contact_email">
     <a href="mailto:Seth@GoodmanPark.com">
