Updated pro-bono work

--- a/pro_bono.html
+++ b/pro_bono.html
@@ -1,24 +1,33 @@
 <div class="container">
 	<div class="row about_line">
 		<div class="col-12">
-			<div class="about_key text-left">Child Care Connection, Inc.</div>
-			<div class="about_location text-left">Trenton, New Jersey</div>
+			<div class="about_key text-left">Lawyers’ Committee For Human Rights (n/k/a Human Rights First), Asylum Project</div>
+			<div class="about_location text-left">New York, New York</div>
 			<div class="about_blurb">
-				Vice-President/Member of the Board of Trustees for six years
-				for this child care resource and referral agency.  Served as
-				agency’s legal advisor in various matters.
+				Pro bono asylum advocate.  Represented asylum applicants from Liberia
+				and Sierra Leone (second matter was done in conjunction with HIAS).  Continue to provide various
+				legal assistance to clients following successful grants of permanent residency status.
 			</div>
 		</div>
 	</div>
 	<div class="row about_line">
 		<div class="col-12">
-			<div class="about_key text-left">Lawyers’ Committee For Human Rights (n/k/a Human Rights First), Asylum Project</div>
-			<div class="about_location text-left">New York, New York</div>
+			<div class="about_key text-left">HIAS</div>
+			<div class="about_location text-left">New York, NY</div>
 			<div class="about_blurb">
-				Refugee advocate.  Represented asylum applicants from Liberia
-				and Sierra Leone (second matter was done in conjunction with
-				the Hebrew Immigration Aid Society).  Continue to provide various
-				legal assistance to clients following successful grants of permanent residency status.
+				Pro bono refugee advocate. Represented refugees from Ukraine and Turkmenistan
+				in their applications before the USCIS to become Lawful Permanent Residents.
+			</div>
+		</div>
+	</div>
+	</div>
+	<div class="row about_line">
+		<div class="col-12">
+			<div class="about_key text-left">American Immigration Council – Immigration Justice Campaign</div>
+			<div class="about_location text-left">Newark and Elizabeth, New Jersey</div>
+			<div class="about_blurb">
+				Pro bono detainee advocate. Represented undocumented immigrants in custody and bond proceedings
+				before the Executive Office of Immigration Review.
 			</div>
 		</div>
 	</div>
@@ -33,10 +42,12 @@
 	</div>
 	<div class="row about_line">
 		<div class="col-12">
-			<div class="about_key text-left">Read Alliance</div>
-			<div class="about_location text-left">New York, New York</div>
+			<div class="about_key text-left">Child Care Connection, Inc.</div>
+			<div class="about_location text-left">Trenton, New Jersey</div>
 			<div class="about_blurb">
-				Volunteer one-on-one reader for Early Literacy Program, various locations.
+				Vice-President/Member of the Board of Trustees for six years
+				for this child care resource and referral agency.  Served as
+				agency’s legal advisor in various matters.
 			</div>
 		</div>
 	</div>
