--- a/index.html
+++ b/index.html
@@ -8,21 +8,6 @@
     <script type="text/javascript" src="goodmanpark_home.js"></script>
   </head>
   <body>
-    <div class="menu_button"><img class="menu_bars" src="menu_bars_round.svg"></div>
-    <div class="menu_panel">
-      <div class="menu_title">
-        Menu
-      </div>
-      <div class="menu_item about_gp">
-        About
-      </div>
-      <div class="menu_item pro_bono">
-        Pro Bono Work
-      </div>
-      <div class="menu_item contact">
-        Contact
-      </div>
-    </div>
     <div class="container">
       <div class="row">
           <img class="homepage_logo" src="GoodmanParkLogo.png">
@@ -30,37 +15,27 @@
     </div>
     <div class="main_content">
       <div class="container">
-        <div>
-          <div class="row about_line">
-            <div class="col-6">
-              <div class="about_key">Legal Analysis</div>
-              <div class="about_blurb">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis felis justo, laoreet ut ullamcorper eget, pellentesque ut nunc. Aliquam in felis tempor, molestie arcu in, semper mi. Nullam magna felis, suscipit a enim ac, egestas efficitur mauris. Interdum et malesuada fames ac ante ipsum primis in faucibus.</div>
-            </div>
-            <div class="col-6">
-              <div class="about_key">Advocacy</div>
-              <div class="about_blurb">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis felis justo, laoreet ut ullamcorper eget, pellentesque ut nunc. Aliquam in felis tempor, molestie arcu in, semper mi. Nullam magna felis, suscipit a enim ac, egestas efficitur mauris. Interdum et malesuada fames ac ante ipsum primis in faucibus.</div>
-            </div>
-          </div>
-          <div class="row about_line">
-            <div class="col-6">
-              <div class="about_key">Mediation</div>
-              <div class="about_blurb">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis felis justo, laoreet ut ullamcorper eget, pellentesque ut nunc. Aliquam in felis tempor, molestie arcu in, semper mi. Nullam magna felis, suscipit a enim ac, egestas efficitur mauris. Interdum et malesuada fames ac ante ipsum primis in faucibus.</div>
-            </div>
-            <div class="col-6">
-              <div class="about_key">Commercial Litigation</div>
-              <div class="about_blurb">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis felis justo, laoreet ut ullamcorper eget, pellentesque ut nunc. Aliquam in felis tempor, molestie arcu in, semper mi. Nullam magna felis, suscipit a enim ac, egestas efficitur mauris. Interdum et malesuada fames ac ante ipsum primis in faucibus.</div>
-            </div>
-          </div>
-          <div class="row about_line">
-            <div class="col-6">
-              <div class="about_key">In-house Counseling</div>
-              <div class="about_blurb">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis felis justo, laoreet ut ullamcorper eget, pellentesque ut nunc. Aliquam in felis tempor, molestie arcu in, semper mi. Nullam magna felis, suscipit a enim ac, egestas efficitur mauris. Interdum et malesuada fames ac ante ipsum primis in faucibus.</div>
-            </div>
-            <div class="col-6">
-              <div class="about_key">Public Interest</div>
-              <div class="about_blurb">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis felis justo, laoreet ut ullamcorper eget, pellentesque ut nunc. Aliquam in felis tempor, molestie arcu in, semper mi. Nullam magna felis, suscipit a enim ac, egestas efficitur mauris. Interdum et malesuada fames ac ante ipsum primis in faucibus.</div>
-            </div>
-          </div>
+        <h2>Contact Info</h2>
+        <div class="contact_address">
+            <div>2585 Broadway, Suite 209</div>
+            <div>New York, NY 10025</div>
+        </div>
+        <div class="contact_phone">
+          Office<br/>
+          646.493.4490<br/>
+          <br/>
+          Cell<br/>
+          267.205.3753
+        </div>
+        <div class="contact_email">
+          <a href="mailto:Seth@GoodmanPark.com">
+            Email
+          </a>
+        </div>
+        <div class="contact_linkedin">
+          <a href="https://www.linkedin.com/in/sethgpark/" target="_blank">
+            LinkedIn
+          </a>
         </div>
       </div>
     </div>
