--- a/index.html
+++ b/index.html
@@ -10,13 +10,16 @@
 	<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
   </head>
+  <style>
+	font-light {font-weight: 300}
+  </style>
   <body style="font-family: Open Sans">
     <div class="main_content">
       <div class="container">
         <div class="row" style="height: 100px">
           <div class="col text-center">GoodmanPark Law, PLLC </div>
         </div>
-        <div class="row">
+        <div class="row justify-content-between">
           <div class="col-7 text-justify">
             For the past thirty years, I have advocated on behalf of individuals
             and corporations in a myriad of contexts. I’ve associated with firms
@@ -31,10 +34,10 @@
             service organizations with their advocacy needs.  
           </div>
           <div class="col-5">
-            <img src="Seth2_BW_REV2.jpg" />
-            <div style="font-size: small; font-weight: 300"><i>Seth Goodman Park, Esq.<i></div>
+            <img src="Seth2_BW_REV2.jpg" style="height: 300"/>
+            <div class="font-light" style="font-size: small;"><i>Seth Goodman Park, Esq.<i></div>
             <div class="mt-3">
-              <i
+              <i class="font-light"
                 >At every step along the way, I have taken pride in asking the
                 right questions and then advancing arguments that present my
                 client's case in the strongest possible light.</i
