All but footer on first page

--- a/index.html
+++ b/index.html
@@ -5,43 +5,281 @@
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
     />
-	<link rel="preconnect" href="https://fonts.googleapis.com">
-	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400&display=swap"
+      rel="stylesheet"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
   </head>
   <style>
-	font-light {font-weight: 300}
+    .font-light {
+      font-weight: 300;
+    }
+
+    .hl2line {
+      border-top: 1px solid rgba(136, 127, 99, 1);
+      border-bottom: 1px solid rgba(136, 127, 99, 1);
+      padding: 2px 0 0 0;
+      height: 5px;
+      width: 53px;
+      margin-top: 10px;
+    }
   </style>
-  <body style="font-family: Open Sans">
+  <body style="font-family: Open Sans; background: #f1f1e4">
     <div class="main_content">
+      <div class="row" style="height: 56px">
+        <div class="col-3" style="background: rgba(39, 39, 37, 1)"></div>
+        <div class="col-2" style="background: rgba(176, 19, 19, 1)"></div>
+        <div
+          class="col-1 text-center pt-3"
+          style="background: rgba(124, 109, 115, 1); color: white"
+        >
+          <strong>Home</strong>
+        </div>
+        <div
+          class="col-1 text-center pt-3"
+          style="background: rgba(176, 19, 19, 1); color: white"
+        >
+          <strong>Contact</strong>
+        </div>
+        <div class="col-2" style="background: rgba(176, 19, 19, 1)"></div>
+        <div class="col-3" style="background: rgba(39, 39, 37, 1)"></div>
+      </div>
       <div class="container">
         <div class="row" style="height: 100px">
-          <div class="col text-center">GoodmanPark Law, PLLC </div>
-        </div>
-        <div class="row justify-content-between">
-          <div class="col-7 text-justify">
-            For the past thirty years, I have advocated on behalf of individuals
-            and corporations in a myriad of contexts. I’ve associated with firms
-            and companies of various sizes and, in those roles, I’ve argued
-            issues and cases in a number of different legal settings.<br />I’ve
-            won bench and jury trial verdicts, argued successful motions,
-            drafted winning briefs, and prevailed in arbitration. I’ve counseled
-            on litigation as an in-house attorney and I’ve assisted clients in
-            negotiating optimal settlements, both in direct negotiations and
-            with the participation of party neutrals.<br />I started GoodmanPark
-            Law in 2020 to assist individuals, law firms, and other legal
-            service organizations with their advocacy needs.  
+          <div
+            class="col text-center align-self-center"
+            style="font-size: 29px; letter-spacing: 0.1em"
+          >
+            GoodmanPark Law, PLLC 
           </div>
-          <div class="col-5">
-            <img src="Seth2_BW_REV2.jpg" style="height: 300"/>
-            <div class="font-light" style="font-size: small;"><i>Seth Goodman Park, Esq.<i></div>
+        </div>
+        <div
+          class="row justify-content-around p-4"
+          style="color: #f0f0da; background: #272725"
+        >
+          <div class="col-6 text-justify">
+            <p>
+              For the past thirty years, I have advocated on behalf of
+              individuals and corporations in a myriad of contexts. I’ve
+              associated with firms and companies of various sizes and, in those
+              roles, I’ve argued issues and cases in a number of different legal
+              settings.
+            </p>
+            <br />
+            <p>
+              I’ve won bench and jury trial verdicts, argued successful motions,
+              drafted winning briefs, and prevailed in arbitration. I’ve
+              counseled on litigation as an in-house attorney and I’ve assisted
+              clients in negotiating optimal settlements, both in direct
+              negotiations and with the participation of party neutrals.
+            </p>
+            <br />
+            <p>
+              I started GoodmanPark Law in 2020 to assist individuals, law
+              firms, and other legal service organizations with their advocacy
+              needs.  
+            </p>
+          </div>
+          <div class="col-4">
+            <img src="Seth2_BW_REV2.jpg" style="height: 300" />
+            <div class="font-light" style="font-size: small">
+              <i>Seth Goodman Park, Esq.</i>
+            </div>
             <div class="mt-3">
               <i class="font-light"
                 >At every step along the way, I have taken pride in asking the
                 right questions and then advancing arguments that present my
                 client's case in the strongest possible light.</i
               >
+            </div>
+          </div>
+        </div>
+      </div>
+      <div
+        class="row"
+        style="background: rgba(124, 109, 115, 1); color: #f1f1e4; height: 53px"
+      >
+        <div
+          class="col text-center align-self-center"
+          style="font-size: 29px; letter-spacing: 0.1em"
+        >
+          Legal Advocacy
+        </div>
+      </div>
+      <div class="container" style="font-size: 14">
+        <div class="row mt-4" style="min-height: 300px">
+          <div class="col-6" style="border-right: 2px dashed #9d9d94">
+            <div class="row text-center justify-content-center">
+              <div class="col-12" style="font-size: 20">
+                Immigration Law Advocacy
+              </div>
+              <div class="hl2line"></div>
+            </div>
+            <div class="row mt-4 pr-4">
+              <div class="col">
+                <p>
+                  I provide per diem as well as longer-term assistance to law
+                  firms and immigration organizations, representing clients
+                  before the U.S. Citizenship and Immigration Services (USCIS),
+                  Immigration Court (IJ), Bureau of Immigration Appeals (BIA)
+                  and the U.S. Department of Justice.
+                </p>
+                <br />
+                <p>
+                  Over the course of my career, my passion has been the pro bono
+                  work I've done, representing immigrants in various “fear of
+                  return” proceedings before the USCIS and IJs. I won my first
+                  Asylum case in 1996 and I’m thrilled to be able to devote more
+                  of my time to this area of the law. I have represented
+                  immigrants in a variety of matters including:
+                </p>
+              </div>
+              <div class="row">
+                <div class="col">
+                  <ul>
+                    <li>
+                      Asylum applications and hearings before the USCIS Asylum
+                      Hearing Office
+                    </li>
+                    <li>Asylum proceedings in Immigration Court</li>
+                    <li>
+                      Adjustment of Status (Green Card) applications and
+                      interviews
+                    </li>
+                    <li>
+                      Naturalization (Citizenship) applications and interviews
+                    </li>
+                    <li>TPS applications</li>
+                    <li>SIJS applications</li>
+                    <li>Motions to reopen proceedings</li>
+                    <li>Motions for change of venue</li>
+                    <li>Bond redetermination hearings</li>
+                    <li>Withholding ofremoval and CAT applications</li>
+                    <li>Reasonable Fear Interviews</li>
+                    <li>Cancellation of Removal merits hearings</li>
+                  </ul>
+                </div>
+              </div>
+              <div class="row mt-4">
+                <div class="col">
+                  I have volunteered as an attorney for the following
+                  organizations:
+                </div>
+              </div>
+              <div class="row mt-4">
+                <div class="col">
+                  <ul>
+                    <li>
+                      New Sanctuary Coalition:
+                      <a href="https://www.newsanctuarynyc.org"
+                        >https://www.newsanctuarynyc.org</a
+                      >
+                    </li>
+                    <li>
+                      HIAS:
+                      <a href="https://www.hias.org">https://www.hias.org</a>
+                    </li>
+                    <li>
+                      Immigration Justice Campaign:
+                      <a href="https://immigrationjustice.us"
+                        >https://immigrationjustice.us</a
+                      >
+                    </li>
+                    <li>
+                      Safe Passage Project:
+                      <a href="https://www.safepassageproject.org"
+                        >https://www.safepassageproject.org</a
+                      >
+                    </li>
+                    <li>
+                      New York City Anti-Violence Project:
+                      <a href="https://avp.org">https://avp.org</a>
+                    </li>
+                    <li>
+                      The Lawyers' Committee for Human Rights:
+                      <a href="https://www.humanrightsfirst.org"
+                        >https://www.humanrightsfirst.org</a
+                      >
+                    </li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-6">
+            <div div class="row text-center justify-content-center">
+              <div class="col-12" style="font-size: 20">
+                Litigation Assistance
+              </div>
+              <div class="hl2line"></div>
+            </div>
+
+            <div class="row mt-4 pl-4">
+              <div class="col">
+                <p>
+                  I freelance in civil litigation matters, covering court
+                  appearances and depositions, researching and drafting briefs,
+                  conducting document reviews, and assisting in other legal
+                  advocacy projects.
+                </p>
+                <br />
+                <p>Over the years I have:</p>
+              </div>
+            </div>
+            <div class="row mb-4">
+              <div class="col">
+                <ul>
+                  <li>
+                    Served as lead counsel in bench and jury trials in federal
+                    court
+                  </li>
+                  <li>Litigated complex commercial matters in state court</li>
+                  <li>Arbitrated reinsurance disputes</li>
+                  <li>
+                    Written and argued dispositive motions in state and federal
+                  </li>
+                  <li>
+                    Represented clients in mediation and in administrative court
+                    hearings
+                  </li>
+                  <li>Argued appeals in both state and federal court</li>
+                  <li>Won dispositive motions in state and federal court</li>
+                  <li>Counseled on litigation as an in-house attorney</li>
+                </ul>
+              </div>
+            </div>
+            <div
+              class="row text-center justify-content-center"
+              style="margin-top: 68px"
+            >
+              <div class="col-12" style="font-size: 20">About Me</div>
+              <div class="hl2line"></div>
+            </div>
+            <div class="row pl-4 mt-4">
+              <div class="col">
+                <p>
+                  I began my career as an associate attorney in the litigation
+                  department of a mid-sized regional law firm. After several
+                  years there, I moved on to a series of increasingly greater
+                  leadership roles at a captive commercial litigation operation
+                  which eventually became known as Siegal & Park. Over the
+                  decades there, I mediated, arbitrated, and tried a variety of
+                  cases. For part of my career, I also worked as an in-house
+                  litigation attorney, overseeing complex coverage matters as a
+                  Vice President of a large, multinational insurance company.
+                </p>
+                <br />
+                <p>
+                  I am licensed to practice before the courts in the states of
+                  New York and New Jersey and various Federal District and
+                  Circuit Courts. I am also registered with the Executive Office
+                  of Immigration Review to practice before the Immigration
+                  Courts and the Board of Immigration Appeals.
+                </p>
+              </div>
             </div>
           </div>
         </div>
