--- a/index.html
+++ b/index.html
@@ -284,6 +284,21 @@
           </div>
         </div>
       </div>
+      <div
+        class="row mt-4"
+        style="height: 56px; background: rgba(39, 39, 37, 1); font-size: 14"
+      >
+        <div class="col-3" style="background: rgba(176, 19, 19, 1)"></div>
+        <div class="col align-self-center" style="color: #aa9f7b">
+          &ZeroWidthSpace;&ZeroWidthSpace;&ZeroWidthSpace;&ZeroWidthSpace;©&nbsp;
+          Seth Goodman Park&nbsp; &nbsp; &nbsp; •&nbsp; &nbsp; &nbsp; Website
+          design by Jaye Medalia
+          <a href="https://www.linkedin.com/in/sethgpark/">
+            <img class="float-right" src="linkedInlogo.webp"
+          /></a>
+        </div>
+        <div class="col-3" style="background: rgba(176, 19, 19, 1)"></div>
+      </div>
     </div>
   </body>
 </html>
