Changed webp to jpg

--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
           Seth Goodman Park&nbsp; &nbsp; &nbsp; •&nbsp; &nbsp; &nbsp; Website
           design by Jaye Medalia
           <a href="https://www.linkedin.com/in/sethgpark/">
-            <img class="float-right" src="linkedInlogo.webp"
+            <img class="float-right" src="linkedInlogo.jpg"
           /></a>
         </div>
         <div class="col-3" style="background: rgba(176, 19, 19, 1)"></div>
