--- a/index.html
+++ b/index.html
@@ -130,11 +130,11 @@
                 <br />
                 <p>
                   Over the course of my career, my passion has been the pro bono
-                  work I've done, representing immigrants in various “fear of
-                  return” proceedings before the USCIS and IJs. I won my first
-                  Asylum case in 1996 and I’m thrilled to be able to devote more
-                  of my time to this area of the law. I have represented
-                  immigrants in a variety of matters including:
+                  work I've done, representing immigrants in various proceedings
+                  before the USCIS and IJs. I won my first Asylum case in 1996
+                  and I’m thrilled to be able to devote more of my time to this
+                  area of the law. I have represented immigrants in a variety of
+                  matters including:
                 </p>
               </div>
               <div class="row">
@@ -173,12 +173,6 @@
                 <div class="col">
                   <ul>
                     <li>
-                      New Sanctuary Coalition:
-                      <a href="https://www.newsanctuarynyc.org"
-                        >https://www.newsanctuarynyc.org</a
-                      >
-                    </li>
-                    <li>
                       HIAS:
                       <a href="https://www.hias.org">https://www.hias.org</a>
                     </li>
@@ -202,6 +196,12 @@
                       The Lawyers' Committee for Human Rights:
                       <a href="https://www.humanrightsfirst.org"
                         >https://www.humanrightsfirst.org</a
+                      >
+                    </li>
+                    <li>
+                      New Sanctuary Coalition:
+                      <a href="https://www.newsanctuarynyc.org"
+                        >https://www.newsanctuarynyc.org</a
                       >
                     </li>
                   </ul>
