--- a/contact.html
+++ b/contact.html
@@ -43,6 +43,7 @@
     </p>
   </div>
   <div data-tf-widget="NjROA2OS" style="height: 400px; color: #f1f1e4"></div>
+  <script src="//embed.typeform.com/next/embed.js"></script>
   <div class="row justify-content-center">
     <div class="col-6" style="font-size: 12">
       <p>
