--- a/contact.html
+++ b/contact.html
@@ -42,9 +42,12 @@
       >
     </p>
   </div>
-  <div data-tf-widget="NjROA2OS" style="height: 400px; color: #f1f1e4"></div>
-  <script src="//embed.typeform.com/next/embed.js"></script>
   <div class="row justify-content-center">
+    <div class="col-8" data-tf-widget="NjROA2OS" style="height: 400px; color: #f1f1e4"></div>
+  </div>
+  
+  <script src="//embed.typeform.com/next/embed.js"></script>
+  <div class="row justify-content-center mt-4">
     <div class="col-6" style="font-size: 12">
       <p>
         ©2021 GoodmanPark Law, PLLC. All rights reserved. This website may
